popup alignment issue resolved

--- a/src/containers/AnalyticsContainer/AnalyticsContainer.scss
+++ b/src/containers/AnalyticsContainer/AnalyticsContainer.scss
@@ -51,10 +51,9 @@
   .mm-popup__box__header__title {
     font-size: 19px;
     position: relative !important;
-    left: -220px !important;
     font-weight: 500;
   }
-  
+
 }
 .mm-popup__close {
   background: none !important;
